--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,3 +1,5 @@
+<h1>Landing Page</h1>
+<h3>This is a homepage where one can submit their contact info</h3>
 <h1>New Contact</h1>
 <form action="/contacts" method="POST">
   <div>
@@ -19,4 +21,5 @@
   <div>
   	<input type="submit">
   </div>
+
 </form>
