--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -3,23 +3,23 @@
 <h1>New Contact</h1>
 <form action="/contacts" method="POST">
   <div>
-  	<label for="first_name">First Name: </label>
-  	<input id="first_name" type="text" name="contact[first_name]">
+  	<!-- <label for="first_name">First Name: </label> -->
+  	<input id="first_name" type="text" name="contact[first_name]" placeholder="First Name Here">
   </div>
   <div>
-  	<label for="phone">Phone: </label>
-  	<input id="phone" type="tel" name="contact[phone]">
+  	<!-- <label for="phone">Phone: </label> -->
+  	<input id="phone" type="tel" name="contact[phone]" placeholder="Your Phone Number Here">
   </div>
   <div>
-  	<label for="email">Email: </label>
-  	<input id="email" type="email" name="contact[email]">
+  	<!-- <label for="email">Email: </label> -->
+  	<input id="email" type="email" name="contact[email]" placeholder="Your Email Here">
   </div>
   <div>
-  	<label for="link">Resume URL: </label>
-  	<input id="link" type="text" name="contact[link]">
+  	<!-- <label for="link">Resume URL: </label> -->
+  	<input id="link" type="text" name="contact[link]" placeholder="Your Resume URL Here">
   </div>
   <div>
-  	<input type="submit">
+  	<input type="submit" class="button">
   </div>
 
 </form>
